<resources>
    <string name="app_name">Bank it!</string>
    <string name="mainTitle"></string>
    <string name="nameIkki">ikki</string>
    <string name="nameKazucharo">kazucharo</string>
    <string name="nameYu">yu</string>
    <string name="nameAda">ada</string>
    <string name="nameBe">be-</string>
    <string name="nameHide">Hide</string>
    <string name="nameNobu">nobu</string>
    <string name="questAssignAll">全員に割り当てる</string>
    <string name="questBody">body</string>
    <string name="questBodyDefault">- [ ] \n- [ ] \n- [ ] \n</string>
    <string name="questCostPre">cost-pre</string>
    <string name="questCostPre0">0</string>
    <string name="questCostPre1">1</string>
    <string name="questCostPre2">2</string>
    <string name="questCostPre3">3</string>
    <string name="questCostPre5">5</string>
    <string name="questCostPreX">\?</string>
    <string name="questMilestoneId">milestoneId</string>
    <string name="questPriority">priority</string>
    <string name="questPriority1">1 (min)</string>
    <string name="questPriority3">3</string>
    <string name="questPriority5">5 (max)</string>
    <string name="questResult">result (readonly)</string>
    <string name="questSubmit">クエスト発行</string>
    <string name="questTitle">title (required)</string>
    <string name="showStaffRoleResult">SHOW</string>
    <string name="staffRoleResult">今日の順番は%1$sです\n３０分交代です。頑張ってください</string>
    <string name="staffRoleResultExplain">ボタンを押すと、ここに結果が表示されます</string>
    <string name="textColon">: </string>
    <string name="toBlackJack">BLACK JACK</string>
    <string name="toHighAndLow">HIGH AND LOW</string>
    <string name="toQuestNew">NEW QUEST</string>
    <string name="toStaffRole">STAFF ROLE</string>
    <string name="topNotice">画面をタッチしてね</string>
    <string name="questThisWeek">今週のクエスト予定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">戻る</string>
    <string name="resultFragmentTitle">RESULT</string>
    <string name="help">ルール表示</string>
    <string name="newGame">ゲームをはじめる</string>
    <string name="highAndLowRule01">ディーラーカードが7より上か下かを予想する。</string>
    <string name="highAndLowRule02">上だと予想するなら「High」を押し、</string>
    <string name="highAndLowRule03">下だと予想するなら「Low」を押す。</string>
    <string name="isHigh">HIGH</string>
    <string name="isLow">LOW</string>
    <string name="cardHistoryTest">♥7,♠K</string>
    <string name="selectHighOrLow">SELECT HIGH OR LOW</string>
    <string name="isBack">BACK</string>
    <string name="isNext">NEXT</string>
    <string name="resultWin">YOU WIN\nMONEY + %1$d</string>
    <string name="resultLose">YOU LOSE</string>
    <string name="resultMoney">TOTAL MONEY : %1$d\nNEXT BET %2$d</string>
    <string name="loading">now loading...</string>
    <string name="signIn">Log In</string>
    <string name="signOut">Log Out</string>
    <string name="needUpdate">Please update app version.</string>
</resources>
