<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.QuestNewActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- titleだとActivity内で重複が発生するので、suffix追加 -->
        <EditText
            android:id="@+id/titleQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/questTitle"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/questBody"
            android:inputType="textMultiLine"
            android:text="@string/questBodyDefault" />

        <CheckBox
            android:id="@+id/assignAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questAssignAll" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/questPriority" />

        <RadioGroup
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/priority3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priority1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questPriority1" />

            <RadioButton
                android:id="@+id/priority3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questPriority3" />

            <RadioButton
                android:id="@+id/priority5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questPriority5" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/questCostPre" />

        <RadioGroup
            android:id="@+id/costPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/costPre3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/costPre0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questCostPre0" />

            <RadioButton
                android:id="@+id/costPre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questCostPre1" />

            <RadioButton
                android:id="@+id/costPre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questCostPre2" />

            <RadioButton
                android:id="@+id/costPre3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questCostPre3" />

            <RadioButton
                android:id="@+id/costPre5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questCostPre5" />

            <RadioButton
                android:id="@+id/costPreX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questCostPreX" />

        </RadioGroup>

        <EditText
            android:id="@+id/milestoneId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/questMilestoneId"
            android:inputType="textShortMessage" />

        <Button
            android:id="@+id/createQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questSubmit" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/questResult"
            android:inputType="none|textMultiLine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>