<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".pages.MainMenuFragment">

    <Button
        android:id="@+id/toHighAndLowGame"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginBottom="16dp"
        android:text="@string/newGame" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highAndLowRule01" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highAndLowRule02" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highAndLowRule03" />

</LinearLayout>

