<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffRoleActivity">

    <TableLayout
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameIkki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameIkki" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameKazucharo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameKazucharo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameYu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameYu" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameAda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameAda" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameBe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameBe" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameHide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/nameNobu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameNobu" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>