<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".pages.MainMenuFragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/toHighAndLow"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:text="@string/toHighAndLow" />

        <Button
            android:id="@+id/toBlackJack"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:text="@string/toBlackJack"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/toStaffRole"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:text="@string/toStaffRole"
            android:visibility="invisible" />

        <Button
            android:id="@+id/toQuestNew"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:text="@string/toQuestNew"
            android:visibility="invisible" />
    </TableRow>

</TableLayout>

