<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MenuFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/toBlackJack"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toBlackJack" />

            <Button
                android:id="@+id/toHighAndLow"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toHighAndLow" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/toStaffRole"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toStaffRole" />

            <Button
                android:id="@+id/toQuestNew"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toQuestNew" />
        </TableRow>

    </TableLayout>
</FrameLayout>

