<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titleText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/toBlackJack"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toBlackJack"
                android:visibility="visible" />

            <Button
                android:id="@+id/toHighAndLow"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toHighAndLow" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="144dp">

            <Button
                android:id="@+id/toStaffRole"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toStaffRole" />

            <Button
                android:id="@+id/toQuestNew"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/toQuestNew" />
        </TableRow>

    </TableLayout>

    <FrameLayout
        android:id="@+id/fragmentFrame"
        android:layout_width="411dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
