<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.HighAndLowPlayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardHistoryText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center_vertical"
            android:text="@string/cardHistoryTest"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/usedCardsArea"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:orientation="horizontal">

            <!--
            origin image size 1200x1600
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/card_club_01" />
            -->
        </LinearLayout>

        <TextView
            android:id="@+id/messageWindowText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.5"
            android:text="@string/selectHighOrLow"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/highButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/isHigh"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/lowButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/isLow"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>